no css inside html files, use only css files for that. divide notebooks.css, so we have separate css files for gesishub and gesisbinder and also for faq and about pages.

--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/error.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/error.html
@@ -1,16 +1,4 @@
-{% extends "page.html" %}
+{% extends "templates/error.html" %}
 
-{% block meta_social %}
-{% endblock meta_social %}
-
-{% block main %}
-<div class="text-center jumbotron" style="background-color: #ffffff;">
-  <h1>
-    {{status_code}}: {{status_message}}
-  </h1>
-
-  <p class="lead">
-    {{message}}
-  </p>
-</div>
-{% endblock main %}
+{% block logo %}
+{% endblock logo %}
