--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/footer.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/footer.html
@@ -3,10 +3,10 @@
       <span class="footer-span">
           <img src="{{ static_nginx }}images/leibniz_logo_en_white.svg?v={{ static_version }}" width="78" height="54" alt="Leibniz Logo"/>
       </span>
-        <span class="footer-span" style="padding-right: 0;">
+        <span class="footer-span-no-padding">
           <a class="footer-link" href="{{ imprint_url }}">Imprint</a> |
       </span>
-        <span class="footer-span" style="padding-right: 0;">
+        <span class="footer-span-no-padding">
           <a class="footer-link" href="{{ data_protection_url }}">Data protection</a> |
       </span>
         <span class="footer-span">
