--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/nav.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/nav.html
@@ -1,8 +1,7 @@
 <div id="nav-container" class="container">
     <div class="row">
         <nav class="navbar navbar-default">
-            <div class="container-fluid"
-                 style="color: #58748f; background-color: #cdd5dd; border: none; border-radius: 0; padding: 0;">
+            <div class="nav-main-container container-fluid">
                 <div>
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar"
                             aria-expanded="false" aria-controls="navbar">
@@ -12,8 +11,7 @@
                         <span class="icon-bar"></span>
                     </button>
                 </div>
-                <div id="navbar" class="navbar-collapse collapse" style="border-color: #e7e7e7;">
-                    {#<ul class="nav navbar-nav" style="float:none; margin: 0 auto; display: table; table-layout: fixed;">#}
+                <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav" id="navbar-list">
                         {# NOTE id="navbar-active-a" class="gs_active_sub" --> used to highlight a menu element, check gesis_nav.js #}
                         {% if active == 'hub' and user and not status_code %}  {# not status_code -> no 400 or 500 errors #}
