--- a/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
+++ b/gesisbinder/gesisbinder/files/etc/binderhub/templates/gesis/header.html
@@ -1,6 +1,6 @@
-<header style="background-color: #333;">
+<header>
     <div role="navigation" class="navbar navbar-default navbar-static-top">
-        <div style="background-color: #333;">
+        <div>
             <div id="header-container" class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="{{ gesis_url }}">
@@ -11,7 +11,7 @@
                         <ul class="nav nav-pills pull-left ">
                             {% if active == 'home' %}
                             <li>
-                                <a href="{{ login_url }}" style="display: inline; padding: 0;">
+                                <a class="header-icon-link" href="{{ login_url }}">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon glyphicon-log-in"></b>
                                     </button>
@@ -19,7 +19,7 @@
                             </li>
                             {% elif active == 'hub' and user %}
                             <li>
-                                <a href="{{ logout_url }}" style="display: inline; padding: 0;">
+                                <a class="header-icon-link" href="{{ logout_url }}">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon glyphicon-log-out"></b>
                                     </button>
@@ -27,7 +27,7 @@
                             </li>
                             {% endif %}
                             <li>
-                                <a href="{{ about_url }}" style="display: inline; padding: 0;">
+                                <a class="header-icon-link" href="{{ about_url }}">
                                     <button class="navbar-toggle navbar-link">
                                         <b aria-hidden="true" class="visible-xs glyphicon glyphicon-question-sign"></b>
                                     </button>
@@ -59,7 +59,6 @@
                         {% endif %}
                         <li>
                             <a href="{{ about_url }}">
-                                {#<span class="top-menu-item hidden-xs" {% if active == 'about' %}style="color: #ff6100;"{% endif %}>#}
                                 <span class="top-menu-item hidden-xs">
                               <span aria-hidden="true" class="glyphicon glyphicon-question-sign"></span>
                               About
