--- a/gesishub/gesishub/files/etc/binderhub/templates/error.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/error.html
@@ -1,13 +1,4 @@
-{% extends "page.html" %}
+{% extends "templates/error.html" %}
 
-{% block main %}
-<div class="text-center jumbotron" style="background-color: #ffffff;">
-  <h1>
-    {{status_code}}: {{status_message}}
-  </h1>
-
-  <p class="lead">
-    {{message}}
-  </p>
-</div>
-{% endblock main %}
+{% block logo %}
+{% endblock logo %}
