--- a/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/about.html
@@ -4,7 +4,6 @@
 {% block meta_description %}{% endblock %}
 
 {% block meta_social %}
-<!-- Social media previews -->
 <meta property="og:title" content="GESIS Notebooks">
 <meta property="og:description" content="Open Research Computing for the Social Sciences.">
 <meta property="og:image" content="https://notebooks.gesis.org/static/images/logo/logo_big_square.png?v={{ static_version }}">
@@ -15,8 +14,7 @@
 {% endblock meta_social %}
 
 {% block extra_css %}
-<link href="{{ static_nginx }}orc_site.css?v={{ static_version }}" rel="stylesheet" />
-<link href="{{ static_nginx }}team.css?v={{ static_version }}" rel="stylesheet" />
+<link href="{{ static_nginx }}about.css?v={{ static_version }}" rel="stylesheet" />
 {% endblock extra_css %}
 
 {% block main %}
