--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -3,10 +3,14 @@
 {% block stylesheet %}
 <meta id="base-url" data-url="{{ binder_base_url }}">
 <meta id="badge-base-url" data-url="{{badge_base_url}}">
-<script src="{{ static_binder }}dist/bundle.js"></script>
-<link href="{{ static_binder }}dist/styles.css" rel="stylesheet"/>
+<script src="{{ static_binder }}dist/bundle.js?v={{ static_version }}"></script>
+<link href="{{ static_binder }}dist/styles.css?v={{ static_version }}" rel="stylesheet"/>
 {{ super() }}
 {% endblock %}
+
+{% block extra_css %}
+<link href="{{ static_nginx }}binder.css?v={{ static_version }}" rel="stylesheet" />
+{% endblock extra_css %}
 
 {% block scripts %}
     <script src="{{static_url("components/requirejs/require.js") }}" type="text/javascript" charset="utf-8"></script>
@@ -59,8 +63,7 @@
                     <a role="button" id="launch-{{ project[2] }}"
                        class="project-launch btn btn-sm {% if project_active %}btn-primary{% else %}btn-warning{% endif %}{% if project_not_active %} hidden{% endif %}"
                        href="{% if project_active %}{{ url }}{% else %}#{% endif %}"
-                       data-url="{{ project[0] }}"
-                       style="vertical-align: top;">
+                       data-url="{{ project[0] }}">
                        {% if project_active %}My Server{% else %}Launch{% endif %}
                     </a>
                     <a role="button" id="delete-{{ project[2] }}"
@@ -90,7 +93,7 @@
         <div class="modal-body" id="delete-project-body">
           <span id="delete-project-text">Are you sure that you want to delete the project?</span>
           <br>
-          <label style="font-weight: normal;"><input type="checkbox" id="delete-on-disk"> Delete the project also on my persistent storage.</label>
+          <label class="delete-project-label"><input type="checkbox" id="delete-on-disk"> Delete the project also on my persistent storage.</label>
           <input type="hidden" id="delete-url" value=""/>
           <input type="hidden" id="delete-id" value=""/>
           <input type="hidden" id="delete-name" value=""/>
@@ -111,12 +114,13 @@
   <div class="row form-group no-projects{% if projects %} hidden{% endif %}"></div>
   <div class="row">
     <div class="col-lg-12 build-form-container">
+    {# copied from https://github.com/jupyterhub/binderhub/blob/207ae704752cde82f33fc771a3b58aa1ecc04b6d/binderhub/templates/index.html#L34 #}
     {% block binder_form %}
-    <form id="build-form" class="form jumbotron" style="margin-bottom: 0;">
+      <form id="build-form" class="form jumbotron">
         <h3 id="form-header" class='row'>Build and launch a new repository</h3>
         <input type="hidden" id="provider_prefix" value="gh"/>
         <div class="form-group row">
-          <label for="repository">Git repository URL (github.com, gitlab.com or self-host)</label>
+          <label for="repository">GitHub repository name or URL</label>
           <div class="input-group">
             <div class="input-group-btn" id="url-type-btn">
               <button type="button" class="btn btn-secondary dropdown-toggle"
@@ -133,18 +137,20 @@
                 <li class="dropdown-item" value="gist"><a href="#">Gist</a></li>
                 <li class="dropdown-item" value="gl"><a href="#">GitLab.com</a></li>
                 <li class="dropdown-item" value="git"><a href="#">Git repository</a></li>
-                {# TODO enable zenodo and figshare #}
+                {# TODO enable zenodo, figshare and others #}
 {#                <li class="dropdown-item" value="zenodo"><a href="#">Zenodo DOI</a></li>#}
 {#                <li class="dropdown-item" value="figshare"><a href="#">Figshare DOI</a></li>#}
+{#                <li class="dropdown-item" value="hydroshare"><a href="#">Hydroshare resource</a></li>#}
+{#                <li class="dropdown-item" value="dataverse"><a href="#">Dataverse DOI</a></li>#}
               </ul>
             </div>
-            <input class="form-control" type="text" id="repository" data-lpignore="true" placeholder="GitHub repository name or link"/>
+            <input class="form-control" type="text" id="repository" data-lpignore="true" placeholder="GitHub repository name or URL"/>
           </div>
         </div>
         <div class="form-row row">
           <div class="form-group col-md-4">
             <label for="ref">Git branch, tag, or commit</label>
-            <input class="form-control" type="text" id="ref" placeholder="master"/>
+            <input class="form-control" type="text" id="ref" placeholder="Git branch, tag, or commit"/>
           </div>
           <div class="form-group col-md-6">
             <label for="filepath"></label>
@@ -178,19 +184,19 @@
         </div>
 
         <!--url section-->
-        <div class="url row" style="display: none;">
+        <div class="url row">
             <div class="dropdownmenu">
               <label>Copy the URL below and share your Binder with others:</label>
             </div>
             <div class="url-row">
               <pre id="basic-url-snippet" data-default="Fill in the fields to see a URL for sharing your Binder."></pre>
-              <img class="icon clipboard" src="{{ static_binder }}images/copy-icon-black.svg" data-clipboard-target="#basic-url-snippet" alt="Copy to clipboard">
+              <img class="icon clipboard" src="{{ static_binder }}images/copy-icon-black.svg?v={{ static_version }}" data-clipboard-target="#basic-url-snippet" alt="Copy to clipboard">
             </div>
         </div>
 
-        <div class="badges row" style="display: none;">
+        <div class="badges row">
             <div class="dropdownmenu" id="toggle-badge-snippet">
-              <label>Copy the text below, then paste into your README to show a binder badge: <img id="badge" src="{{ static_binder }}images/badge_logo.svg"></label>
+              <label>Copy the text below, then paste into your README to show a binder badge: <img id="badge" src="{{ static_binder }}images/badge_logo.svg?v={{ static_version }}"></label>
               <a id="badge-link"></a>
               <a href="#" title="show badge snippets"><span id="badge-snippet-caret" class="glyphicon glyphicon-triangle-right"></span></a>
             </div>
@@ -198,17 +204,17 @@
               <!--Markdown section-->
               <div  class="badge-snippet-row">
                  <pre id="markdown-badge-snippet" data-default="Fill in the fields to see the markdown badge snippet."></pre>
-                 <img class="icon" src="{{ static_binder }}images/markdown-icon.svg">
+                 <img class="icon" src="{{ static_binder }}images/markdown-icon.svg?v={{ static_version }}">
                  <img class="icon clipboard"
-                    src="{{ static_binder }}images/copy-icon-black.svg"
+                    src="{{ static_binder }}images/copy-icon-black.svg?v={{ static_version }}"
                     data-clipboard-target="#markdown-badge-snippet"
                     alt="Copy markdown link to clipboard">
               </div>
               <!--RST section-->
               <div  class="badge-snippet-row">
                   <pre id="rst-badge-snippet" data-default="Fill in the fields to see the rST badge snippet."></pre>
-                  <img class="icon" src="{{ static_binder }}images/rst-icon.svg">
-                  <img class="icon clipboard" src="{{ static_binder }}images/copy-icon-black.svg"
+                  <img class="icon" src="{{ static_binder }}images/rst-icon.svg?v={{ static_version }}">
+                  <img class="icon clipboard" src="{{ static_binder }}images/copy-icon-black.svg?v={{ static_version }}"
                     data-clipboard-target="#rst-badge-snippet"
                     alt="Copy rst link to clipboard">
               </div>
@@ -217,7 +223,7 @@
 
         <div id="build-progress" class="progress on-build hidden row">
           <div id="phase-failed" class="progress-bar progress-bar-danger progress-bar-striped hidden" style="width: 100%">
-            Failed
+            Failed. Try refreshing this page in a few seconds.
           </div>
           <div id="phase-waiting" class="progress-bar progress-bar-danger progress-bar-striped active hidden" style="width: 10%">
             Waiting
@@ -264,7 +270,7 @@
   {% endblock projects_form %}
 
   {% block how_it_works %}
-    <div class="row text-center display-flex" style="margin: 54px -16px 0px -16px;">
+    <div id="how-it-works-gesis" class="row text-center display-flex">
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
             <div class="use-examples">
                 <img src="{{ static_nginx }}images/mybinder_vector_logo.svg?v={{ static_version }}" alt="MyBinder Logo">
@@ -321,7 +327,7 @@
         <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4 project-example">
             <div class="thumbnail">
                 <div class="caption project-caption">
-                    <h4 style="margin:0; font-size: 16px;"><a href="{{ example.repo_link }}" target='_blank'><b>{{ example.headline }}</b></a>
+                    <h4><a href="{{ example.repo_link }}" target='_blank'><b>{{ example.headline }}</b></a>
                         <br>
                         {% if example.who %}
                         <b>By:</b> <i>{{ example.who|safe }}</i>
@@ -332,14 +338,14 @@
                         {% endif %}
                     </h4>
                     <p>{{ example.description|safe }}</p>
-                    <div style="display: inline-block; vertical-align: middle;">
-                        <div style="display: inline-block;">
-                            {% if example.where %}
-                            <b style="font-size: 13px;">Language:</b> {{ example.language }}
+                    <div>
+                        <div class="project-language">
+                            {% if example.language %}
+                            <b>Language:</b> {{ example.language }}
                             {% endif %}
                         </div>
-                        <div style="display: inline-block; float: right;">
-                            <a href="{{ binder_base_url }}{{ example.binder_link }}" style="align:right;">
+                        <div class="project-badge">
+                            <a href="{{ binder_base_url }}{{ example.binder_link }}">
                                 <img src="{{ static_nginx }}images/badge_logo.svg?v={{ static_version }}" alt="Launch Binder">
                             </a>
                         </div>
@@ -349,8 +355,8 @@
         </div>
         {% endfor %}
     </div>
-    <div class="row form-group" style="padding: 0px 16px 0px 16px;">
-        <a href="{{ gallery_url }}" style="float:right;">See all projects >></a>
+    <div class="row form-group see-all-projects">
+        <a href="{{ gallery_url }}">See all projects >></a>
     </div>
     <div class="row form-group"></div>
     {% endblock featured_projects %}
