--- a/gesishub/gesishub/files/etc/binderhub/templates/about.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/about.html
@@ -1,8 +1,5 @@
-{% extends "templates/error.html" %}
+{% extends "templates/about.html" %}
 
 {% block head %}
 <link href="{{static_url("dist/styles.css")}}" rel="stylesheet">
 {% endblock head %}
-
-{% block logo %}
-{% endblock logo %}
