--- a/gesishub/gesishub/files/etc/binderhub/templates/error.html
+++ b/gesishub/gesishub/files/etc/binderhub/templates/error.html
@@ -1,4 +1,8 @@
 {% extends "templates/error.html" %}
 
+{% block head %}
+<link href="{{static_url("dist/styles.css")}}" rel="stylesheet">
+{% endblock head %}
+
 {% block logo %}
 {% endblock logo %}
