fix closing modal

--- a/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
+++ b/gesishub/gesishub/files/etc/jupyterhub/templates/home.html
@@ -509,8 +509,8 @@ $(document).ready(function() {
                         $('.no-projects').removeClass("hidden");
                     }
                     // close modal
-                    $('#delete-project').modal('hide');
-                    //$('#delete-close').trigger('click');
+                    //$('#delete-project').modal('hide');
+                    $('#delete-close').trigger('click');
                 }
                 },
             error: function () {
