fix maintenance page

--- a/load_balancer/static/notebooks.css
+++ b/load_balancer/static/notebooks.css
@@ -344,7 +344,17 @@ footer.footer {
 }
 
 /* maintenance page */
-.maintenance {
+div.maintenance {
 	margin: 2em;
 	text-align: center;
+}
+
+div.maintenance > h1 {
+	font-size: 300%;
+    line-height: normal;
+}
+
+div.maintenance > p {
+	font-size: 200%;
+    line-height: normal;
 }
